# fastapi-boilerplate-backend

./: .cursorrules  .dockerignore  .env.exemple  .env.sample  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  Dockerfile  Dockerfile.railway  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  RAILWAY_DEPLOYMENT_FIX.md  RATE_LIMITING_COMPLETE.md  README.md  SAAS_BOILERPLATE_PLAN.md  SECURITY_IMPLEMENTATION_STATUS.md  SEED_DATA_ENHANCED.md  alembic.ini  customize-deployment.sh  deploy-env.sh  deploy-multi-container.sh  deploy.sh  docker-compose.yml  example.env  fly.production.toml  fly.staging.toml  fly.toml  gunicorn.conf.py  load-env.sh  nixpacks.toml  project.code-workspace  pyproject.toml  railway.toml  setup-custom-domain.sh  start-prod.sh  test_auth.py  test_email_functions.py  test_password.py  test_rate_limiting.sh
.cursor/rules/: alembic-best-practices.mdc  database-schema-rag.mdc  database-schema.mdc  fastapi-best-practice.mdc  fastapi-pagination-best-practices.mdc  fastapi-security-best-practices.mdc  fastapi-users-best-practices.mdc  poetry-best-practices.mdc  pricing-strategy.mdc  project-plan.mdc  project-structure.mdc  pytest-best-practices.mdc  r2-storage-best-practices.mdc  rag-best-practices.mdc  resend-best-practices.mdc  ruff-best-practices.mdc  sqlalchemy-best-practices.mdc  stripe-best-practices.mdc  uvicorn-best-practices.mdc
.github/: FUNDING.yml
.github/workflows/: python-app.yml
alembic/: env.py  seed.sql
alembic/versions/: 001_initial_schema.py  00b801594cec_add_description_field_to_organizations.py  0b79c1911baa_initial_schema_with_onboarding.py  1a35f72702c6_add_text_knowledge_ingestion.py  1c94e3b1f697_add_email_tokens_table.py  20250821_rename_teams_to_organizations.py  274eb79b752a_add_billing_cycle_support.py  2aec57755e57_add_oauth_fields_to_user_model.py  3c00a136a39e_initial.py  3fcfb0faf29c_add_knowledge_items_model.py  567e88df2a55_initial_migration.py  578363024d31_add_team_creation_constraints.py  646a06554f40_initial_schema.py  65e3d209c0bc_initial_schema_with_better_auth.py  68ccdf362ad1_make_team_project_optional_in_activity_.py  81d1a2048a01_add_team_limits.py  8dc2a3b98482_rename_metadata_column_and_add_activity_.py  8dde2e595ec1_initial_schema.py  999999999999_remove_rag_artifacts.py  af42df90ab3c_update_security_config.py  bd24122dde39_initial_schema.py  e511d05c8c8e_add_training_data_model.py  ecae788fd218_add_rag_workflow_models.py  initial_setup.py
app/: main.py
app/core/: config.py  openapi.py  security.py  users.py
app/models/: __init__.py  blog.py  user.py
app/routers/: blog.py  project.py  team.py
app/schemas/: blog.py  project.py  team.py  user.py
app/services/: blog_service.py  project_service.py
app/utils/: email.py
docker/: .env.example  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: ADMIN_USER_FIELDS_FIX.md  AI_FEATURES.md  API_DOCUMENTATION.md  AUDIT_LOGGING_GUIDE.md  AUTHENTICATION_GUIDE.md  DASHBOARD_INTEGRATION_PLAN.md  DOCUMENTATION_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  PRODUCTION.md  QUICK_START_SECURITY.md  RATE_LIMITING_COMPLETE.md  RATE_LIMITING_GUIDE.md  README_SECURITY_FIRST.md  ROADMAP_UPDATE_COMPLETE.md  SAAS_BOILERPLATE_PLAN.md  SECURITY_IMPLEMENTATION_STATUS.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_RECOMMENDATIONS.md  SECURITY_UPDATE.md  SEED_REORGANIZATION.md  STRIPE_PRICING_UPDATE.md  i18n-integration.md  i18n.md  monitoring-metrics.md  performance-optimization.md  postman_collection.json  production-deployment.md
migrations/versions/: xxxx_rename_metadata_column.py
scripts/: README.md  check_user_verification.py  complete_onboarding.py  drop_alembic_version.py  drop_schema.py  init_db.py  reset_db.py  run_seed.py  seed.py  seed_fresh.py  setup-docker.sh  start-production.sh  test_auth.py  test_password.py  test_rate_limiting.sh  test_registration_email.py  test_resend_email.py  verify_user.py
scripts/seed/: __init__.py  activity_logs.py  ai_usage.py  constants.py  organizations.py  projects.py  reset.py  subscription_plans.py  subscriptions.py  users.py
src/: main.py
src/activity_log/: __init__.py  models.py  service.py
src/ai_analytics/: __init__.py  models.py  routes.py  schemas.py  service.py
src/ai_content/: __init__.py  models.py  routes.py  schemas.py  service.py
src/ai_core/: __init__.py  billing.py  billing_routes.py  dashboard.py  dashboard_routes.py  middleware.py  providers.py  routes.py  service.py  usage.py  usage_limits.py
src/ai_documents/: __init__.py  models.py  routes.py  schemas.py  service.py
src/auth/: __init__.py  admin_routes.py  better_auth_compat.py  dependencies.py  email_routes.py  models.py  oauth_providers.py  onboarding_routes.py  otp_routes.py  profile_routes.py  router.py  routes.py  schemas.py  service.py  user_routes.py  users.py
src/common/: activity.py  audit_logger.py  config.py  constants.py  database.py  enums.py  exceptions.py  health.py  i18n.py  i18n_old.py  middleware.py  models.py  monitoring.py  openapi.py  pagination.py  production.py  rate_limiter.py  schemas.py  security.py  session.py  streaming.py  types.py  utils.py
src/config/: settings.py
src/invitations/: __init__.py  email_service.py  email_templates.py  models.py  routes.py  schemas.py  service.py
src/organizations/: models.py  routes.py  schemas.py  service.py
src/payments/: routes.py  schemas.py  service.py  webhooks.py
src/projects/: __init__.py  models.py  router.py  routes.py  schemas.py  service.py
tests/: __init__.py  conftest.py  manual_test.py  test_auth.py  test_auth_better_auth.py  test_auth_enhanced.py  test_common_activity.py  test_common_openapi.py  test_common_types.py  test_common_utils.py  test_email_utils.py  test_exceptions.py  test_fix.py  test_helpers.py  test_onboarding.py  test_organization.py  test_otp_routes.py  test_project.py  test_security.py  test_security_edgecases.py  test_services_organizations.py  test_services_payments.py  test_services_projects.py  test_storage_utils.py  test_team.py  test_uploads.py
(+51 files in other folders)
